--- a/src/Nutrivida/LojaBundle/Resources/views/Admin/Produto/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Admin/Produto/index.html.twig
@@ -14,7 +14,7 @@
                     responsive: true,
                     "ajax": "{{ path('_produto_pagination') }}",
                     "aoColumnDefs": [
-                        { 'bSortable': false, 'aTargets': [ 2 ] }
+                        { 'bSortable': false, 'aTargets': [ 3 ] }
                      ]
             });
 
@@ -68,6 +68,7 @@
                 <thead>
                     <tr>
                         <th>Nome</th>
+                        <th>Categoria</th>
                         <th>Ativo</th>
                         <th></th>
                     </tr>
