--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/header.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/header.html.twig
@@ -40,7 +40,7 @@
             <div class="header_bottom">
                 <div class="container">	 			
                     <div class="logo">
-                        <a href="index.html"><img src="{{ asset('bundles/nutrividaloja/loja/images/logo.png') }}" alt=""/></a>
+                        <a href="{{ path('_loja_index') }}"><img src="{{ asset('bundles/nutrividaloja/loja/images/logo.png') }}" alt=""/></a>
                     </div>	
                     <div class="header_bottom_right">
                         <div class="h_menu4">
