--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/menu.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/menu.html.twig
@@ -1,10 +1,10 @@
 <a class="toggleMenu" href="#">Menu</a>
 <ul class="nav">
-    <li><a href="index.html">Home</a></li>
+    <li><a href="{{ path('_loja_index') }}">Home</a></li>
     <li><a href="#">Produtos</a>
         <ul>
             {% for categoria in categorias %}
-            <li><a href="products.html">{{ categoria.getNome }}</a></li>
+            <li><a href="{{ path('_loja_categoria', {id: categoria.getId}) }}">{{ categoria.getNome }}</a></li>
             {% endfor %}
         </ul>
     </li>
