--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/layout.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/layout.html.twig
@@ -14,7 +14,10 @@
             }
         </style>
         <script src="{{ asset('bundles/nutrividaloja/loja/js/jquery-1.11.1.min.js') }}"></script>
-        <script src="{{ asset('bundles/nutrividaloja/loja/js/jquery.easydropdown.js') }}"></script>        
+        <script src="{{ asset('bundles/nutrividaloja/loja/js/jquery.easydropdown.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/bootbox.min.js') }}"></script>
+
         {% block head %}{% endblock %}
 
         <meta charset="utf-8">
