--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Default/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Default/index.html.twig
@@ -3,6 +3,8 @@
 {% block head %}
     <script src="{{ asset('bundles/nutrividaloja/loja/js/responsiveslides.min.js') }}"></script>
     <script src="{{ asset('bundles/nutrividaloja/loja/js/easyResponsiveTabs.js') }}"></script>
+    
+    <script src="{{ asset('bundles/nutrividaloja/loja/js/easyResponsiveTabs.js') }}"></script>
     <script type="text/javascript">
         jQuery(document).ready(function () {
             jQuery("#slider").responsiveSlides({
@@ -18,6 +20,19 @@
                 fit: true   // 100% fit in a container
             });
         });
+        
+        function enviarNews()
+        {
+            var email = jQuery("#news").val();
+            var re = /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/i;
+            if (re.test(email)) {
+                jQuery.post('{{ path('_loja_news') }}', {email: email}, function(msg) {
+                    bootbox.alert(msg);
+                });
+            } else {
+                bootbox.alert("E-mail Inválido");
+            }
+        }
     </script>
 
 {% endblock %}
@@ -40,8 +55,8 @@
 	<div class="search">
 	  <div class="stay">Assine nossa newsletter</div>
 	  <div class="stay_right">
-		  <input type="text" value="E-mail" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your email address';}">
-		  <input type="submit" value="">
+              <input type="text" id="news" value="E-mail" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your email address';}">
+                <input onclick="enviarNews()" type="submit" value="">
 	  </div>
 	  <div class="clearfix"> </div>
 	</div>
