--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/menu.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/menu.html.twig
@@ -4,12 +4,12 @@
     <li><a href="#">Produtos</a>
         <ul>
             {% for categoria in categorias %}
-            <li><a href="{{ path('_loja_categoria', {id: categoria.getId}) }}">{{ categoria.getNome }}</a></li>
+            <li><a href="{{ path('_loja_categoria', {slug: categoria.getSlug}) }}">{{ categoria.getNome }}</a></li>
             {% endfor %}
         </ul>
     </li>
     <li><a href="#">Sobre a NutriVida</a></li>
-    <li><a href="contact.html">Contato</a></li>
+    <li><a href="{{ path('_loja_contato') }}">Contato</a></li>
 </ul>
 <script src="{{ asset('bundles/nutrividaloja/loja/js/nav.js') }}"></script>
 
