--- a/src/Nutrivida/LojaBundle/Resources/views/Admin/Default/login.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Admin/Default/login.html.twig
@@ -6,26 +6,26 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Sindilojas Litoral Centro | Login</title>
+        <title>Nutrivida RS | Login</title>
         
-        <script src="{{ asset('bundles/sindilojas/js/jquery-1.11.1.min.js') }}"></script>
-        <script src="{{ asset('bundles/sindilojas/js/jquery-migrate-1.2.1.min.js') }}"></script>
-        <script src="{{ asset('bundles/sindilojas/js/bootstrap.min.js') }}"></script>
-        <script src="{{ asset('bundles/sindilojas/js/modernizr.min.js') }}"></script>
-        <script src="{{ asset('bundles/sindilojas/js/pace.min.js') }}"></script>
-        <script src="{{ asset('bundles/sindilojas/js/retina.min.js') }}"></script>
-        <script src="{{ asset('bundles/sindilojas/js/jquery.cookies.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/jquery-1.11.1.min.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/jquery-migrate-1.2.1.min.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/modernizr.min.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/pace.min.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/retina.min.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/jquery.cookies.js') }}"></script>
 
-        <script src="{{ asset('bundles/sindilojas/js/custom.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/custom.js') }}"></script>
 
         
-        <link href="{{ asset('bundles/sindilojas/css/style.default.css') }}" rel="stylesheet">
+        <link href="{{ asset('bundles/nutrividaloja/admin/css/style.default.css') }}" rel="stylesheet">
         <link rel="shortcut icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
         
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
-        <script src="js/html5shiv.js"></script>
-        <script src="js/respond.min.js"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/html5shiv.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/admin/js/respond.min.js') }}"></script>
         <![endif]-->
     </head>
 
@@ -34,7 +34,7 @@
             <div class="panel panel-signin">
                 <div class="panel-body">
                     <div class="logo text-center">
-                        <img src="{{ asset('bundles/sindilojas/images/logo-primary.png') }}" />
+                        <img src="{{ asset('bundles/nutrividaloja/loja/images/logo.png') }}" />
                     </div>
                     <p class="text-center">{{ error }}</p>
                     
