--- a/src/Nutrivida/LojaBundle/Resources/views/Admin/Default/semPermissao.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Admin/Default/semPermissao.html.twig
@@ -18,7 +18,7 @@
     </div><!-- pageheader -->
      <div class="contentpanel">
         <div class="panel panel-success-head">
-            
+            Você não tem permissão para acessar esta página
         </div><!-- panel -->
      </div><!-- contentpanel -->
 {% endblock %}
