--- a/src/Nutrivida/LojaBundle/Resources/views/Admin/Empresa/form.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Admin/Empresa/form.html.twig
@@ -42,6 +42,8 @@
                     jQuery(element).closest('.form-group').append(error);
                 },
                 submitHandler: function(form) {
+                    jQuery("#salvar").hide();
+                    jQuery('#loading').show();
                     form.submit();
                }
             });
@@ -149,7 +151,7 @@
                   <div class="row">
                     <div class="col-sm-9 col-sm-offset-3">
                         <img src="{{ asset('bundles/nutrividaloja/admin/images/loading.gif') }}" id="loading" alt="Carregando" />
-                        <button class="btn btn-primary mr5">Salvar</button>
+                        <button id="salvar" class="btn btn-primary mr5">Salvar</button>
                         <button type="button" onclick="history.back()" class="btn btn-default mr5">Cancelar</button>
                     </div>
                   </div>
