--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/menu.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/menu.html.twig
@@ -8,7 +8,7 @@
             {% endfor %}
         </ul>
     </li>
-    <li><a href="#">Sobre a NutriVida</a></li>
+    <li><a href="{{ path('_loja_empresa') }}">Sobre a NutriVida</a></li>
     <li><a href="{{ path('_loja_contato') }}">Contato</a></li>
 </ul>
 <script src="{{ asset('bundles/nutrividaloja/loja/js/nav.js') }}"></script>
