--- a/src/Nutrivida/LojaBundle/Resources/views/Admin/Produto/form.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Admin/Produto/form.html.twig
@@ -47,6 +47,8 @@
                         var valor = jQuery("#produto_valor").maskMoney('unmasked')[0];
                         jQuery("#produto_valor").maskMoney('destroy');
                         jQuery("#produto_valor").val(valor);
+                        jQuery("#salvar").hide();
+                        jQuery('#loading').show();
                         form.submit();
                     } else {
                         bootbox.alert("Insira ao menos uma imagem");
@@ -168,7 +170,7 @@
                   <div class="row">
                     <div class="col-sm-9 col-sm-offset-3">
                         <img src="{{ asset('bundles/nutrividaloja/admin/images/loading.gif') }}" id="loading" alt="Carregando" />
-                        <button class="btn btn-primary mr5">Salvar</button>
+                        <button id="salvar" class="btn btn-primary mr5">Salvar</button>
                         <button type="button" onclick="history.back()" class="btn btn-default mr5">Cancelar</button>
                     </div>
                   </div>
