--- a/src/Nutrivida/LojaBundle/Resources/views/Admin/header.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Admin/header.html.twig
@@ -1,7 +1,7 @@
 <div class="headerwrapper">
     <div class="header-left">
         <a class="logo" href="index.html">
-            <img alt="" src="images/logo.png"> 
+            <img style="height: 22px;" alt="" src="{{ asset('bundles/nutrividaloja/loja/images/logo.png') }}"> 
         </a>
         <div class="pull-right">
             <a href="" class="menu-collapse">
@@ -19,7 +19,7 @@
                   <i class="fa fa-caret-down"></i>
                 </button>
                 <ul class="dropdown-menu pull-right" role="menu">
-                  <li><a href="#"><i class="glyphicon glyphicon-log-out"></i>Sair</a></li>
+                  <li><a href="{{ path("_logout") }}"><i class="glyphicon glyphicon-log-out"></i>Sair</a></li>
                 </ul>
             </div><!-- btn-group -->
 
