--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Categoria/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Categoria/index.html.twig
@@ -124,7 +124,7 @@
                                         <div class="tab_desc1">
                                             <h3><a href="#">{{ prod.getNome }}</a></h3>
                                             <p>R$ {{ prod.getValor|number_format(2, ',', '.') }}</p>
-                                            <a href="#" class="btn1 btn-primary1"><span>adicionar</span><img src="{{ asset('bundles/nutrividaloja/loja/images/plus.png') }}" alt=""></a>
+                                            <a href="{{ path('_loja_produto', {slugCategoria: prod.categoria.slug, slug: prod.slug}) }}" class="btn1 btn-primary1"><span>adicionar</span><img src="{{ asset('bundles/nutrividaloja/loja/images/plus.png') }}" alt=""></a>
                                         </div>
                                     </div>
                                 {% if prod.desconto %}
