Cadastro e login do cliente

--- a/src/Nutrivida/LojaBundle/Resources/public/loja/css/style.css
+++ b/src/Nutrivida/LojaBundle/Resources/public/loja/css/style.css
@@ -281,6 +281,11 @@ ul.header_user_info li.user_desc{
 	padding: 10px;
 	width: 75%;
 }
+label.error {
+    color: #a94442;
+    font-size: 12px;
+}
+
 .main-search input[type="text"], .main-search input[type="submit"] {
 	display: inline-block;
 	border: none;
@@ -2284,7 +2289,9 @@ a.forgot {
 	display: block;
 	text-transform: uppercase;
 }
-.register-top-grid input[type="text"], .register-bottom-grid input[type="text"] {
+.register-top-grid input[type="text"], .register-bottom-grid input[type="text"],
+.register-top-grid input[type="email"], .register-bottom-grid input[type="email"],
+.register-top-grid input[type="password"], .register-bottom-grid input[type="password"]{
 	border: 1px solid #EEE;
 	outline-color:#FF5B36;
 	width: 96%;
