--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/header.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/header.html.twig
@@ -5,7 +5,7 @@
                     </div>
                     <div class="header_top_right">
                         <ul class="header_user_info" style="padding:2px 0 5px 0">
-                            <a href="#" class="login">
+                            <a href="{{ path("_loja_cliente") }}" class="login">
                                 <i class="user"></i> 
                                 <li class="user_desc">Minha Conta</li>
                             </a>
